--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -9,3 +9,49 @@
     font-size: 10px;
   }
 }
+
+.mat-icon {
+  height: 20px;
+  width: 20px;
+  font-size: 21px;
+  padding-top: 2px;
+}
+
+.icona-cibando {
+  width: 60px;
+  margin-right: 5px;
+}
+
+.verde {
+  background-color: green;
+  color: white;
+  width: 100%;
+  text-align: center;
+  padding: 20px;
+  font-size: 20px;
+}
+
+.rosso {
+  background-color: red;
+  color: white;
+  width: 100%;
+  text-align: center;
+  padding: 20px;
+  font-size: 20px;
+}
+
+.blu {
+  background-color: blue;
+  color: white;
+  width: 100%;
+  text-align: center;
+  padding: 20px;
+  font-size: 20px;
+}
+
+.default {
+  width: 100%;
+  height: 48px;
+  text-align: center;
+  font-size: 20px;
+}
