--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,7 @@ body {
   font-family: 'Montserrat', sans-serif;
 }
 
-.bg-dark, header {
+.bg-red, header {
   background-color: #8e210b !important;
 }
 
@@ -20,3 +20,17 @@ nav {
 }
 
 html, body { height: 100%; }
+
+.carousel-caption {
+  top: 27rem;
+  bottom: auto;
+
+  h3 {
+    font-family: "Homemade apple", cursive;
+    font-size: 40px;
+    text-shadow: black 2px 3px 3px;
+  }
+}
+
+/* Importing Bootstrap SCSS file. */
+@import 'bootstrap/scss/bootstrap';
