--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,5 +32,10 @@ html, body { height: 100%; }
   }
 }
 
+.testoEvidenziato {
+  background-color: yellow;
+  width: 400px;
+}
+
 /* Importing Bootstrap SCSS file. */
 @import 'bootstrap/scss/bootstrap';
