--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 <app-home></app-home>
-
+<app-footer></app-footer>
 <!-- <br>
 <input type="text" [(ngModel)]="coloreScelto"><button (click)="cambiaBG()">Cambia</button>
 <div id="contenitore-switch" [ngSwitch]="colore">
