--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -2,6 +2,10 @@ footer {
   background-color: #8e210b;
   justify-content: space-around;
   height: 200px;
+  float: left;
+  bottom: 0;
+  width: 100%;
+  margin-top: 30px;
 }
 
 div {
