--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,6 +21,12 @@ nav {
 
 html, body { height: 100%; }
 
+h2 {
+  font-size: 35px !important;
+  color: #8e210b !important;
+  font-family: 'Homemade Apple', cursive !important;
+}
+
 .carousel-caption {
   top: 27rem;
   bottom: auto;
