--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,35 +1,35 @@
 
 
-.verde {
-  background-color: green;
-  color: white;
-  width: 100%;
-  text-align: center;
-  padding: 20px;
-  font-size: 20px;
-}
+// .verde {
+//   background-color: green;
+//   color: white;
+//   width: 100%;
+//   text-align: center;
+//   padding: 20px;
+//   font-size: 20px;
+// }
 
-.rosso {
-  background-color: red;
-  color: white;
-  width: 100%;
-  text-align: center;
-  padding: 20px;
-  font-size: 20px;
-}
+// .rosso {
+//   background-color: red;
+//   color: white;
+//   width: 100%;
+//   text-align: center;
+//   padding: 20px;
+//   font-size: 20px;
+// }
 
-.blu {
-  background-color: blue;
-  color: white;
-  width: 100%;
-  text-align: center;
-  padding: 20px;
-  font-size: 20px;
-}
+// .blu {
+//   background-color: blue;
+//   color: white;
+//   width: 100%;
+//   text-align: center;
+//   padding: 20px;
+//   font-size: 20px;
+// }
 
-.default {
-  width: 100%;
-  height: 48px;
-  text-align: center;
-  font-size: 20px;
-}
+// .default {
+//   width: 100%;
+//   height: 48px;
+//   text-align: center;
+//   font-size: 20px;
+// }
