--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -1,5 +1,7 @@
+@import "../../../styles/colors.scss";
+
 footer {
-  background-color: #8e210b;
+  background-color: $primary-color-1;
   justify-content: space-around;
   height: 200px;
   float: left;
@@ -9,7 +11,7 @@ footer {
 }
 
 div {
-  color: white;
+  color: $secondary-color-1;
   font-size: large;
   padding-top: 30px;
 
