--- a/src/app/shared/recipe-card/recipe-card.component.scss
+++ b/src/app/shared/recipe-card/recipe-card.component.scss
@@ -1,3 +1,5 @@
+@import "../../../styles/colors.scss";
+
 .card-container {
   display: block;
   float: left;
@@ -24,7 +26,7 @@
   .card-title {
     font-weight: 900;
     font-size: 16px;
-    color: #8e210b;
+    color: $primary-color-1;
   }
 
   .card-text {
@@ -32,7 +34,7 @@
   }
 
   a.btn.btn-primary {
-    background-color: #8e210b;
+    background-color: $primary-color-1;
     border: none;
     margin: auto;
     padding: 8px, 35px;
