--- a/src/app/components/recipes/recipes.component.html
+++ b/src/app/components/recipes/recipes.component.html
@@ -1,4 +1,3 @@
-<div id="main-container">
-  <h2>Le nostre ricette</h2>
-  <app-recipe-card [recipes]="ricette"></app-recipe-card>
+<div class="container-fluid">
+  <router-outlet></router-outlet>
 </div>
