--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -8,3 +8,12 @@
     text-align: justify;
   }
 }
+
+#ultime-ricette{
+  margin-top: 50px;
+
+  h2 {
+    margin-bottom: 20px;
+    text-align: center;
+  }
+}
