--- a/src/app/components/recipes/detail/detail.component.html
+++ b/src/app/components/recipes/detail/detail.component.html
@@ -1,8 +1,17 @@
-<div class="image" [ngStyle]="{'background-image': 'url(' + ricetta.image + ')'}"></div>
-<div class="body">
-  <h5 class="title">{{ricetta.title}}</h5>
-  <p class="text">{{ricetta.description}}</p>
-  <h5 style="padding-top: 20px; font-weight: 900;">Difficoltà:</h5>
-  <p style="margin-top: -10px;">{{ricetta.difficulty}}</p>
-  <p class="data">Ricetta pubblicata il {{ricetta.date}}</p>
+<div *ngIf="ricetta; else ricetta_non_trovata">
+  <div class="image" [ngStyle]="{'background-image': 'url(' + ricetta.image + ')'}"></div>
+  <div>
+    <h2 class="title">{{ricetta.title}}</h2>
+    <p class="description">{{ricetta.description}}</p>
+    <div class="row">
+      <h5 style="padding-top: 20px; font-weight: 900;">Difficoltà: {{ricetta.difficulty}}</h5>
+    <img [src]="percorsoStelline + ricetta.difficulty + '.png'" class="difficoltà" alt="">
+    </div>
+    <p class="data">Ricetta pubblicata il {{ricetta.date}}</p>
+  </div>
 </div>
+
+
+<ng-template #ricetta_non_trovata>
+  <h2>Ricetta non disponibile</h2>
+</ng-template>
