--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,3 +1,5 @@
+@import "../../../styles/colors.scss";
+
 .container-titolo {
   h2 {
     margin-top: 30px;
@@ -17,3 +19,48 @@
     text-align: center;
   }
 }
+
+
+div#container-utente {
+  background: #0000008a;
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  top: 0px;
+  z-index: 10px;
+  align-items: center;
+}
+
+div#dati-utente {
+  background: white;
+  width: 50%;
+  height: 250px;
+  border: 5px solid $primary-color-1;
+  border-radius: 30px;
+  padding: 16px;
+  font-size: 16px;
+}
+
+ul {
+  height: 90px;
+  margin-top: 33px;
+  font-size: 18px;
+}
+
+li {
+  line-height: 40px;
+}
+
+h2 {
+  text-align: center;
+  font-size: 23px!important;
+}
+
+button.btn.btn-primary.btn-lg {
+  width: 50%;
+  margin-left: 25%;
+  background-color: $primary-color-1;
+}
+
