--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -17,6 +17,9 @@
           <li class="nav-item">
             <a class="nav-link" ><mat-icon> mail_outline</mat-icon> Contatti</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="registrazione"><mat-icon>person_add</mat-icon> Registrazione</a>
+          </li>
         </ul>
       </div>
     </div>
