--- a/src/app/components/recipes/recipes-list/recipes-list.component.html
+++ b/src/app/components/recipes/recipes-list/recipes-list.component.html
@@ -3,5 +3,5 @@
   <div style="height: 30px; margin-top: -15px">
     <div class="comparsa" *ngIf="titoloRicetta">{{titoloRicetta}}</div>
   </div>
-  <app-recipe-card [recipes]="ricette" (messaggio)="riceviMessaggio($event)"></app-recipe-card>
+  <app-recipe-card (messaggio)="riceviMessaggio($event)"></app-recipe-card>
 </div>
