--- a/src/app/shared/recipe-card/recipe-card.component.html
+++ b/src/app/shared/recipe-card/recipe-card.component.html
@@ -1,10 +1,18 @@
-<div class="card-container" *ngFor="let recipe of recipes">
-  <div class="card">
-    <div class="card-image" [ngStyle]="{'background-image': 'url(' + recipe.image + ')'}" (click)="inviaTitolo(recipe.title)"></div>
-    <div class="card-body">
-      <h5 class="card-title">{{recipe.title}}</h5>
-      <p class="card-text">{{recipe.description | slice: 0:250}}...</p>
-      <a class="btn btn-primary" routerLink="/ricette/dettaglio/{{recipe.title}}/{{recipe._id}}">Visualizza</a>
+<div class="container-cards">
+  <div class="container-pagination" *ngIf="pag != 'home'">
+    <div style="font-size: 20px">
+      <strong>{{ricettePerPagina}}</strong> Ricette su un totale di <strong>{{ricetteTotali}}</strong> ricette, pagina corrente: <strong>{{page}}</strong>
+    </div>
+    <p-paginator (onPageChange)="paginate($event)" [rows]="ricettePerPagina" [totalRecords]="ricetteTotali" (rowPerPageOptionsChange)="ricettePerPagina"></p-paginator>
+  </div>
+  <div class="card-container" *ngFor="let recipe of recipes | slice: (page * ricettePerPagina) - ricettePerPagina : page * ricettePerPagina">
+    <div class="card">
+      <div class="card-image" [ngStyle]="{'background-image': 'url(' + recipe.image + ')'}" (click)="inviaTitolo(recipe.title)"></div>
+      <div class="card-body">
+        <h5 class="card-title">{{recipe.title}}</h5>
+        <p class="card-text">{{recipe.description | slice: 0:250}}...</p>
+        <a class="btn btn-primary" routerLink="/ricette/dettaglio/{{recipe.title}}/{{recipe._id}}">Visualizza</a>
+      </div>
     </div>
   </div>
 </div>
