--- a/src/app/components/user/sign-up/sign-up.component.html
+++ b/src/app/components/user/sign-up/sign-up.component.html
@@ -91,7 +91,7 @@
                   <div class="d-flex flex-row align-items-center mb-4">
                     <mat-icon class="icon">person</mat-icon>
                     <div class="form-outline flex-fill mb-0">
-                      <input type="text" id="form3Example1c" name="nome" class="form-control" placeholder="scrivi il tuo nome" formControlName="name"/>
+                      <input type="text" id="form3Example1c" name="nome" class="form-control" placeholder="scrivi il tuo nome" formControlName="name" appChangeColor/>
                       <label class="form-label" for="form3Example1c">Il tuo nome</label>
                       <p class="help is-danger" *ngIf="form.get('name').touched && form.controls.name.hasError('required')">Il campo nome è obbligatorio</p>
                     </div>
@@ -127,6 +127,13 @@
                       <p class="help is-danger" *ngIf="form.getError('diversa') && form.get('ripetiPassword').touched">Attenzione la password inserita non è uguale</p>
                     </div>
                   </div>
+
+                  <!-- <div class="d-flex flex-row align-items-center mb-4">
+                    <div class="form-outline flex-fill mb-0">
+                      <ckeditor [editor]="Editor" [config]="editorConfig" type="text" id="form3Example3cg" class="form-control form-control-lg note" formControlName="note" />
+                      <label class="form-label" for="form3Example1c">Note aggiuntive</label>
+                    </div>
+                  </div> -->
 
                   <div class="form-check d-flex justify-content-center mb-5 termini">
 
