--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -13,3 +13,42 @@
 .navbar-expand-lg .navbar-collapse {
   flex-direction: row-reverse;
 }
+
+.user2{
+  margin-left: 60px;
+  border: 1px solid white;
+  border-radius: 8px;
+  padding: 0px 20px;
+}
+
+.user{
+  margin-left: 60px;
+  border: 1px solid white;
+  border-radius: 8px;
+  padding: 0px 20px;
+  display: flex;
+  color: white;
+  align-items: center;
+
+  span{
+    margin-top: 8px;
+  }
+
+  a {
+    margin-left: 3px;
+    margin-top: 6px;
+    color: white;
+    text-decoration: none;
+  }
+}
+
+.cerca-icon {
+  color: white;
+  margin-right: 8px;
+  margin-top: 8px;
+}
+
+.cerca {
+  color: black;
+  border-radius: 0.375rem;
+}
